tests/snapshots/skill_vfs_manifest_scan_issues_expected_result.json.snap
---
source: test
expression: value
---
{
  "discovered_paths": 2,
  "tool_names": [
    "agenda.add"
  ],
  "issue_count": 1,
  "first_issue_contains_invalid_description": true
}