tests/snapshots/wendao_registry_dynamic_discovery_expected_result.json.snap
---
source: test
expression: value
---
{
  "empty": [],
  "query_prefix_only": [],
  "reference_type_template": [
    "wendao://skills/agenda-management/references/critique_agenda.j2",
    "wendao://skills/agenda-management/references/draft_agenda.j2",
    "wendao://skills/agenda-management/references/final_agenda.j2"
  ],
  "type_alias_template": [
    "wendao://skills/agenda-management/references/critique_agenda.j2",
    "wendao://skills/agenda-management/references/draft_agenda.j2",
    "wendao://skills/agenda-management/references/final_agenda.j2"
  ],
  "config_id_agenda_flow": [
    "wendao://skills/agenda-management/references/agenda_flow.toml"
  ],
  "config_id_soul_forge_flow": [
    "wendao://skills/forge-evolution/references/soul_forge_flow.toml"
  ],
  "semantic_carryover": [
    "wendao://skills/agenda-management/references/critique_agenda.j2",
    "wendao://skills/agenda-management/references/prompts/agenda_validation_genesis_rules.md",
    "wendao://skills/agenda-management/references/rules.md"
  ],
  "query_prefixed_semantic_carryover": [
    "wendao://skills/agenda-management/references/critique_agenda.j2",
    "wendao://skills/agenda-management/references/prompts/agenda_validation_genesis_rules.md",
    "wendao://skills/agenda-management/references/rules.md"
  ],
  "unknown_config_id": []
}